Updated the backend to amplify

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,36 +1,33 @@
 {
   "auth": {
-    "awsserverlessairline44ea6421": {
-      "service": "Cognito",
-      "providerPlugin": "awscloudformation",
+    "serverlessairlineauth": {
+      "customAuth": false,
       "dependsOn": [],
-      "customAuth": false
-    }
-  },
-  "api": {
-    "awsserverlessairline": {
-      "service": "AppSync",
+      "frontendAuthConfig": {
+        "mfaConfiguration": "OPTIONAL",
+        "mfaTypes": [
+          "SMS"
+        ],
+        "passwordProtectionSettings": {
+          "passwordPolicyCharacters": [],
+          "passwordPolicyMinLength": 8
+        },
+        "signupAttributes": [
+          "FAMILY_NAME",
+          "GIVEN_NAME",
+          "PHONE_NUMBER"
+        ],
+        "socialProviders": [],
+        "usernameAttributes": [
+          "EMAIL",
+          "PHONE_NUMBER"
+        ],
+        "verificationMechanisms": [
+          "EMAIL"
+        ]
+      },
       "providerPlugin": "awscloudformation",
-      "output": {
-        "authConfig": {
-          "additionalAuthenticationProviders": [
-            {
-              "authenticationType": "API_KEY",
-              "apiKeyConfig": {
-                "apiKeyExpirationDays": 1,
-                "apiKeyExpirationDate": "2022-03-30T06:59:41.199Z",
-                "description": "sample api key"
-              }
-            }
-          ],
-          "defaultAuthentication": {
-            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-            "userPoolConfig": {
-              "userPoolId": "authawsserverlessairline44ea6421"
-            }
-          }
-        }
-      }
+      "service": "Cognito"
     }
   }
 }
