--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,17 +1,17 @@
 {
-  "providers": [
-    "awscloudformation"
-  ],
   "projectName": "awsserverlessairline",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
     "framework": "vue",
     "config": {
-      "SourceDir": "src/frontend",
-      "DistributionDir": "src/frontend/dist",
-      "BuildCommand": "npm run-script build --prefix src/frontend",
-      "StartCommand": "npm run-script serve --prefix src/frontend"
+      "SourceDir": "src",
+      "DistributionDir": "dist",
+      "BuildCommand": "npm.cmd run-script build",
+      "StartCommand": "npm.cmd run-script serve"
     }
-  }
+  },
+  "providers": [
+    "awscloudformation"
+  ]
 }
