--- a/amplify.yml
+++ b/amplify.yml
@@ -66,7 +66,7 @@ frontend:
           EOF
     build:
       commands:
-        - npm run build
+        - yarn run build
   artifacts:
     baseDirectory: src/frontend/dist/spa
     files:
