--- a/src/backend/shared/libs/template.yaml
+++ b/src/backend/shared/libs/template.yaml
@@ -13,10 +13,12 @@ Resources:
     Properties:
       ContentUri: src/
       CompatibleRuntimes:
-        - python3.7
+        # - python3.8
         - python3.8
+        - python3.9
+        - python3.12
     Metadata:
-      BuildMethod: python3.7
+      BuildMethod: python3.12
 
   ProjectSharedLibsParameter:
     Type: "AWS::SSM::Parameter"
